modal height overflow issue

--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -15,9 +15,9 @@
 	}
 
 	.modal__content {
-		max-height: 85vh;
+		// max-height: 85vh;
 		// max-height: 75%;
-		overflow-y: auto;
+		// overflow-y: auto;
 	}
 	.modal__close {
 		position: absolute;
